unpackaged/main/default/objects/Knowledge__kav/fields/Featured__c.field-meta.xml
<CustomField>
    <fullName>Featured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the article is surfaced first within its Data Category in the Nexus help center.</description>
    <label>Featured</label>
    <type>Checkbox</type>
</CustomField>