unpackaged/main/default/objects/Knowledge__kav/fields/Keywords__c.field-meta.xml
<CustomField>
    <fullName>Keywords__c</fullName>
    <description>Comma- or space-separated keywords for tagging and future AI retrieval. Searched alongside Title and Summary by the Nexus help center.</description>
    <label>Keywords</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>