unpackaged/main/default/objects/Knowledge__kav/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <label>Policy</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>