unpackaged/main/default/objects/Knowledge__kav/fields/Suggested_Articles__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Articles__c</fullName>
    <description>Optional curated list for the help center&#39;s Suggested Articles rail: one article URL Name per line, shown first and topped up automatically with same-topic articles. Blank means fully automatic.</description>
    <inlineHelpText>Optional: curate the Suggested Articles rail. One article URL Name per line; automatically topped up with same-topic articles.</inlineHelpText>
    <label>Suggested Articles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>