unpackaged/main/default/objects/Knowledge__kav/recordTypes/How_To.recordType-meta.xml
<RecordType>
    <fullName>How_To</fullName>
    <active>true</active>
    <description>Step-by-step instructional articles that walk a user through completing a task.</description>
    <label>How-To</label>
</RecordType>