unpackaged/main/default/objects/Knowledge__kav/recordTypes/Standard.recordType-meta.xml
<RecordType>
    <fullName>Standard</fullName>
    <active>true</active>
    <description>Use this record type for all policies &amp; informational articles</description>
    <label>Core Knowledge</label>
</RecordType>