unpackaged/main/default/objects/Knowledge__kav/recordTypes/Troubleshooting.recordType-meta.xml
<RecordType>
    <fullName>Troubleshooting</fullName>
    <active>true</active>
    <description>Problem/symptom and resolution articles for diagnosing and fixing issues.</description>
    <label>Troubleshooting</label>
</RecordType>